test_case/rust-lang_rust/16502_178846391.rs

#![feature(box_syntax)]

fn main() {
    let p = box 1;

    let _ = p; // doesn't move
    p; // does move


    p; // error: use of moved value
}
